--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -962,7 +962,9 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
+		  Données ZIP 
+		--&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -979,7 +981,9 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
+		  Données ZIP 
+	    --&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -996,7 +1000,9 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
+		  Données ZIP 
+		--&gt;
 		&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données de consolidation </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
