--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>Créez en JavaScript votre fichier polyglotte HTML/ZIP/PNG</title>
+	<title>Create your HTML / ZIP / PNG polyglot file in JavaScript</title>
 
 	<link rel="stylesheet" href="dist/reset.css">
 	<link rel="stylesheet" href="dist/reveal.css">
