--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1197,7 +1197,7 @@ await zipReader.close()</code>
 					<li>Minimal PNG file structure:
 						<ol>
 							<li class="fragment">
-								PNG signature (8 octets)
+								PNG signature (8 bytes)
 								<pre><code class="language-plaintext">89 50 4E 47  0D 0A 1A 0A</code></pre>
 							</li>
 							<li class="fragment">
