remove unused plugins

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1802,7 +1802,7 @@ await zipReader.close()</code>
 			hash: true,
 			margin: 0.05,
 			transition: "none",
-			plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
+			plugins: [RevealHighlight, RevealNotes]
 		});
 	</script>
 </body>
