--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1820,7 +1820,7 @@ await zipReader.close()</code>
 			hash: true,
 			margin: 0.05,
 			transition: "none",
-			plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
+			plugins: [RevealHighlight, RevealNotes]
 		});
 	</script>
 </body>
