remove `fragment`classes

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -496,9 +496,9 @@ await zipReader.close()</code>
 				<aside class="notes">
 					<p>HTML content includes:</p>
 					<ul>
-						<li class="fragment">the zip.js library script (<a href="dist/steps/04/assets/zip.min.js"
+						<li>the zip.js library script (<a href="dist/steps/04/assets/zip.min.js"
 								target="_blank">assets/zip.min.js</a>)</li>
-						<li class="fragment">the script displaying the contents of the zip file (<a
+						<li>the script displaying the contents of the zip file (<a
 								href="dist/steps/04/assets/main.js" target="_blank">assets/main.js</a>)</li>
 					</ul>
 				</aside>
