--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -503,9 +503,9 @@ await zipReader.close()</code>
 				<aside class="notes">
 					<p>Contenu HTML inclut :</p>
 					<ul>
-						<li class="fragment">script de la bibliothèque zip.js (<a href="dist/steps/04/assets/zip.min.js"
+						<li>script de la bibliothèque zip.js (<a href="dist/steps/04/assets/zip.min.js"
 								target="_blank">assets/zip.min.js</a>)</li>
-						<li class="fragment">script affichant le contenu du fichier zip (<a
+						<li>script affichant le contenu du fichier zip (<a
 								href="dist/steps/04/assets/main.js" target="_blank">assets/main.js</a>)</li>
 					</ul>
 				</aside>
