--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1600,7 +1600,7 @@ await zipReader.close()</code>
 							<code data-src="dist/steps/13/lib/html-template.js" data-line-numbers="|6-21|6-16|16-17|17-18|18-21" class="language-js"></code>
 						</pre>
 					</div>
-				</div>w
+				</div>
 			</section>
 			<section>
 				<h2>Fichier polyglotte HTML/ZIP/PNG</h2>
