--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -106,6 +106,11 @@
 		.hljs-ln-line.hljs-ln-numbers {
 			display: none;
 		}
+
+		a:link {
+			text-underline-offset: 6px;
+			text-decoration: underline dotted;
+		}
 	</style>
 </head>
 
