--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -111,6 +111,10 @@
 			text-underline-offset: 6px;
 			text-decoration: underline dotted;
 		}
+
+		section p:first-of-type {
+			height: 50px;
+		}
 	</style>
 </head>
 
@@ -172,6 +176,7 @@
 			</section>
 			<section>
 				<h2>Projet de test</h2>
+				<p>Structure du projet</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre><strong>project/index.html</strong></pre>
@@ -190,6 +195,7 @@
 			</section>
 			<section>
 				<h2>Projet de test</h2>
+				<p>Structure du projet</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre>project/index.html</pre>
@@ -208,6 +214,7 @@
 			</section>
 			<section>
 				<h2>Projet de test</h2>
+				<p>Structure du projet</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre><strong>project/index.html</strong></pre>
@@ -226,6 +233,7 @@
 			</section>
 			<section>
 				<h2>Projet de test</h2>
+				<p>Structure du projet</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre>project/index.html</pre>
