--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1000,7 +1000,7 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Content of assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--<
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
 		  ZIP data 
 		--&gt;
 		&lt;script&gt;&lt;!-- Content of assets/main.js --&gt;&lt;/script&gt;
