--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -267,9 +267,9 @@
 							<li class="fragment">LibreOffice/MS Office Documents (<code>.ODT</code>, <code>.DOCX</code>,
 								...)</li>
 							<li class="fragment">Java Archives (<code>.JAR</code>)</li>
-							<li class="fragment">Android Packages (<code>.APK</code> et Archives iOS <code>.IPA</code>)
+							<li class="fragment">Android Packages (<code>.APK</code> and Archives iOS <code>.IPA</code>)
 							</li>
-							<li class="fragment">Web Extensions (<code>.CRX</code> et <code>.XPI</code>)</li>
+							<li class="fragment">Web Extensions (<code>.CRX</code> and <code>.XPI</code>)</li>
 						</ul>
 					</li>
 				</ul>
