rename `dist` folder

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -7,9 +7,9 @@
 
 	<title>Create your HTML / ZIP / PNG polyglot file in JavaScript</title>
 
-	<link rel="stylesheet" href="dist/reset.css">
-	<link rel="stylesheet" href="dist/reveal.css">
-	<link rel="stylesheet" href="dist/theme/solarized.css">
+	<link rel="stylesheet" href="reveal/reset.css">
+	<link rel="stylesheet" href="reveal/reveal.css">
+	<link rel="stylesheet" href="reveal/theme/solarized.css">
 
 	<!-- Theme used for syntax highlighted code -->
 	<link rel="stylesheet" href="plugin/highlight/kimbie-light.css">
@@ -1796,7 +1796,7 @@ await zipReader.close()</code>
 		</div>
 	</div>
 
-	<script src="dist/reveal.js"></script>
+	<script src="reveal/reveal.js"></script>
 	<script src="plugin/notes/notes.js"></script>
 	<script src="plugin/highlight/highlight.js"></script>
 	<script type=module>
