--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -7,9 +7,9 @@
 
 	<title>Créez en JavaScript votre fichier polyglotte HTML/ZIP/PNG</title>
 
-	<link rel="stylesheet" href="dist/reset.css">
-	<link rel="stylesheet" href="dist/reveal.css">
-	<link rel="stylesheet" href="dist/theme/solarized.css">
+	<link rel="stylesheet" href="reveal/reset.css">
+	<link rel="stylesheet" href="reveal/reveal.css">
+	<link rel="stylesheet" href="reveal/theme/solarized.css">
 
 	<!-- Theme used for syntax highlighted code -->
 	<link rel="stylesheet" href="plugin/highlight/kimbie-light.css">
