--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1813,7 +1813,7 @@ await zipReader.close()</code>
 		</div>
 	</div>
 
-	<script src="dist/reveal.js"></script>
+	<script src="reveal/reveal.js"></script>
 	<script src="plugin/notes/notes.js"></script>
 	<script src="plugin/highlight/highlight.js"></script>
 	<script type=module>
