--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -171,8 +171,7 @@
 			</section>
 			<section>
 				<h2>Test project</h2>
-				<iframe loading="lazy" src="code/01/project/index.html"
-					style="height:550px; min-width:550px"></iframe>
+				<iframe loading="lazy" src="code/01/project/index.html" style="height:550px; min-width:550px"></iframe>
 			</section>
 			<section>
 				<h2>Test project</h2>
@@ -511,8 +510,8 @@ await zipReader.close()</code>
 					<ul>
 						<li>the zip.js library script (<a href="code/04/assets/zip.min.js"
 								target="_blank">assets/zip.min.js</a>)</li>
-						<li>the script displaying the contents of the zip file (<a
-								href="code/04/assets/main.js" target="_blank">assets/main.js</a>)</li>
+						<li>the script displaying the contents of the zip file (<a href="code/04/assets/main.js"
+								target="_blank">assets/main.js</a>)</li>
 					</ul>
 				</aside>
 			</section>
@@ -955,8 +954,8 @@ await zipReader.close()</code>
 				<ul>
 					<li class=" fragment">Web pages containing a 256-byte binary content with all possible values</li>
 					<li class="fragment">Test with all <a
-						href="https://developer.mozilla.org/en-US/docs/Web/API/TextDecoder/encoding#value"
-						target="_blank">supported encodings</a></li>
+							href="https://developer.mozilla.org/en-US/docs/Web/API/TextDecoder/encoding#value"
+							target="_blank">supported encodings</a></li>
 					<li class="fragment">Reading of binary data as text in JavaScript</li>
 					<li class="fragment">Determining and displaying the number of characters:
 						<ul>
