--- a/en-EN/code/10/index.html
+++ b/en-EN/code/10/index.html
@@ -15,7 +15,7 @@
 <body>
   <iframe hidden></iframe>
   <main></main>
-  <script src=index.js></script>
+  <script src=index.js type=module></script>
 </body>
 
 </html>
