--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -118,7 +118,7 @@
 	</style>
 </head>
 
-<body>
+<body hidden>
 	<div class="reveal">
 		<div class="slides">
 			<section>
@@ -1833,6 +1833,7 @@ await zipReader.close()</code>
 			transition: "none",
 			plugins: [RevealHighlight, RevealNotes]
 		});
+		document.body.hidden = false;
 	</script>
 </body>
 
