--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1792,6 +1792,11 @@ await zipReader.close()</code>
 					<li class="fragment">Is it dangerous? 🤷 (GIFAR)</li>
 				</ul>
 			</section>
+			<section>
+				<h2>Thank you!</h2>
+				<p>Questions? 🤔, Feedback? 📝</p>
+				<img src="./images/qr-code.png" style="max-height: 50vh;">
+			</section>
 		</div>
 	</div>
 
