--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1810,6 +1810,11 @@ await zipReader.close()</code>
 					<li class="fragment">Est-ce dangereux ? 🤷 (GIFAR)</li>
 				</ul>
 			</section>
+			<section>
+				<h2>Merci !</h2>
+				<p>Questions ? 🤔, Feedback ? 📝</p>
+				<img src="./images/qr-code.png" style="max-height: 50vh;">
+			</section>
 		</div>
 	</div>
 
