remove relative links

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -165,8 +165,7 @@
 						</ul>
 					</li>
 					<li class="fragment">Stylesheets and scripts encoded in UTF-8</li>
-					<li class="fragment">Files stored in the <a href="code/01/project/"
-							target="_blank"><code>project/</code></a> folder</li>
+					<li class="fragment">Files stored in the <code>project/</code> folder</li>
 				</ul>
 			</section>
 			<section>
@@ -508,10 +507,8 @@ await zipReader.close()</code>
 				<aside class="notes">
 					<p>HTML content includes:</p>
 					<ul>
-						<li>the zip.js library script (<a href="code/04/assets/zip.min.js"
-								target="_blank">assets/zip.min.js</a>)</li>
-						<li>the script displaying the contents of the zip file (<a href="code/04/assets/main.js"
-								target="_blank">assets/main.js</a>)</li>
+						<li>the zip.js library script (<code>assets/zip.min.js</code>)</li>
+						<li>the script displaying the contents of the zip file (<code>assets/main.js</code>)</li>
 					</ul>
 				</aside>
 			</section>
