--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -165,8 +165,7 @@
 						</ul>
 					</li>
 					<li class="fragment">Feuilles de style et script encodés en UTF-8</li>
-					<li class="fragment">Fichiers stockés dans le répertoire <a href="code/01/project/"
-							target="_blank"><code>project/</code></a></li>
+					<li class="fragment">Fichiers stockés dans le répertoire <code>project/</code></li>
 				</ul>
 			</section>
 			<section>
@@ -515,10 +514,8 @@ await zipReader.close()</code>
 				<aside class="notes">
 					<p>Contenu HTML inclut :</p>
 					<ul>
-						<li>script de la bibliothèque zip.js (<a href="code/04/assets/zip.min.js"
-								target="_blank">assets/zip.min.js</a>)</li>
-						<li>script affichant le contenu du fichier zip (<a href="code/04/assets/main.js"
-								target="_blank">assets/main.js</a>)</li>
+						<li>script de la bibliothèque zip.js (<code>assets/zip.min.js</code>)</li>
+						<li>script affichant le contenu du fichier zip (<code>assets/main.js</code>)</li>
 					</ul>
 				</aside>
 			</section>
