--- a/fr-FR/code/09/index.html
+++ b/fr-FR/code/09/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
+      font-family: "Arial";
       font-size: 25px;
     }
 
