--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -116,6 +116,7 @@
 			height: 50px;
 		}
 	</style>
+	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
 </head>
 
 <body hidden>
