--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -123,7 +123,11 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Create your HTML / ZIP / PNG polyglot file in JavaScript</h1>
+				<h1 class="r-stretch" style="margin-block-start: 20%">Create your HTML / ZIP / PNG polyglot file in
+					JavaScript</h1>
+				<footer style="text-align: left; font-size: .6em;"><a
+						href="https://github.com/gildas-lormeau/Polyglot-HTML-ZIP-PNG"
+						target="_blank">https://github.com/gildas-lormeau/Polyglot-HTML-ZIP-PNG</a></footer>
 			</section>
 			<section>
 				<h2>Introduction</h2>
