--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -123,7 +123,12 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Créez en JavaScript votre fichier polyglotte <br> HTML / ZIP / PNG</h1>
+				<h1 class="r-stretch" style="margin-block-start: 20%">Créez en JavaScript votre fichier polyglotte <br>
+					HTML / ZIP / PNG</h1>
+				<footer style="text-align: left; font-size: .6em;"><a
+						href="https://github.com/gildas-lormeau/Polyglot-HTML-ZIP-PNG"
+						target="_blank">https://github.com/gildas-lormeau/Polyglot-HTML-ZIP-PNG</a>
+				</footer>
 			</section>
 			<section>
 				<h2>Introduction</h2>
