fix translation issue

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1224,8 +1224,7 @@ await zipReader.close()</code>
 					<li class="fragment">Created in 1996 by a public working group</li>
 					<li class="fragment">Standard, royalty-free image format</li>
 					<li class="fragment">Lossless compression (<code>DEFLATE</code>)</li>
-					<li class="fragment">File composed of a signature folloxed by a sequence of chunks
-						(<code>chunk</code>)</li>
+					<li class="fragment">File composed of a signature folloxed by a sequence of chunks</li>
 					<li class="fragment">Chunk structure:
 						<ol>
 							<li class="fragment">Chunk data length (4 bytes)</li>
