--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1323,7 +1323,7 @@ await zipReader.close()</code>
 					<li class="fragment">Encapsulation of the HTML/ZIP file in a PNG file</li>
 					<li class="fragment">PNG polyglot file structure:
 						<ol>
-							<li class="fragment">PNG signatue</li>
+							<li class="fragment">PNG signature</li>
 							<li class="fragment">PNG header chunk</li>
 							<li class="fragment">PNG text chunk: HTML content up to the opening tag <code>&lt;!--</code>
 							</li>
