--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -1040,7 +1040,7 @@ await zipReader.close()</code>
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
 		  ZIP data 
 		--&gt;
-		&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Consolidation data </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
+		&lt;script type="application/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Consolidation data </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
 		&lt;script&gt;&lt;!-- Content of assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -1460,7 +1460,7 @@ await zipReader.close()</code>
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      ZIP data 
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Consolidation data
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Content of assets/main.js --&gt;&lt;/script&gt;
@@ -1479,7 +1479,7 @@ await zipReader.close()</code>
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> IDAT chunk(s) </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
 		  ZIP data
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Consolidation data
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Content of assets/main.js --&gt;&lt;/script&gt;
@@ -1500,7 +1500,7 @@ await zipReader.close()</code>
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> IDAT chunk(s) </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
 		  ZIP data 
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Consolidation data
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Content of assets/main.js --&gt;&lt;/script&gt;
