--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1055,7 +1055,7 @@ await zipReader.close()</code>
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--
 		  Données ZIP 
 		--&gt;
-		&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données de consolidation </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
+		&lt;script type="application/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données de consolidation </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -1478,7 +1478,7 @@ await zipReader.close()</code>
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP 
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Données de consolidation
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
@@ -1497,7 +1497,7 @@ await zipReader.close()</code>
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
 		  Données ZIP
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Données de consolidation
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
@@ -1518,7 +1518,7 @@ await zipReader.close()</code>
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
 		  Données ZIP 
-		--&gt;&lt;script type="text/json"&gt;
+		--&gt;&lt;script type="application/json"&gt;
 		  Données de consolidation
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
