--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -262,7 +262,7 @@
 						<ul>
 							<li class="fragment">la compression au format <code>DEFLATE</code> depuis la version 2.0
 								(1993)</li>
-							<li class="fragment">le chiffrage <code>AES</code> depuis la version 5.2 (2003)</li>
+							<li class="fragment">le chiffrement <code>AES</code> depuis la version 5.2 (2003)</li>
 						</ul>
 					</li>
 					<li class="fragment">Version 2.0+ supportée sur la plupart des systèmes d'exploitation</li>
