add JS String encoding

--- a/en-EN/index.html
+++ b/en-EN/index.html
@@ -890,7 +890,7 @@ await zipReader.close()</code>
 					<li class="fragment">Bypassing the call to <code>await fetch("")</code></li>
 					<li class="fragment">Read ZIP file from DOM via <a
 							href="https://developer.mozilla.org/en-US/docs/Web/API/Node/textContent"
-							target="_blank"><code>Node#textContent</code></a></li>
+							target="_blank"><code>Node#textContent</code></a> (in `UTF-16`)</li>
 					<li class="fragment">
 						Data corruption caused by character encoding:
 						<ul>
