--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -899,7 +899,7 @@ await zipReader.close()</code>
 					<li class="fragment">Contournement de l'appel à <code>await fetch("")</code></li>
 					<li class="fragment">Lecture du fichier ZIP depuis le DOM via <a
 							href="https://developer.mozilla.org/en-US/docs/Web/API/Node/textContent"
-							target="_blank"><code>Node#textContent</code></a> (en `UTF-16`)</li>
+							target="_blank"><code>Node#textContent</code></a> (en <code>UTF-16</code>)</li>
 					<li class="fragment">
 						Corruption de données engendrée par l'encodage des caractères :
 						<ul>
