--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -897,7 +897,7 @@ await zipReader.close()</code>
 				<h2>Lecture du fichier ZIP depuis le système de fichier</h2>
 				<ul>
 					<li class="fragment">Contournement de l'appel à <code>await fetch("")</code></li>
-					<li class="fragment">Lecture du fichier ZIP depuis le DOM via <a
+					<li class="fragment">Lecture du ZIP depuis le DOM via <a
 							href="https://developer.mozilla.org/en-US/docs/Web/API/Node/textContent"
 							target="_blank"><code>Node#textContent</code></a> (en <code>UTF-16</code>)</li>
 					<li class="fragment">
