--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -302,7 +302,7 @@
 			</section>
 			<section>
 				<h2>Format ZIP</h2>
-				<img src="images/zip-structure.svg" style="max-height: 450px;">
+				<img src="images/zip-structure.svg" style="max-height: 450px;" alt="Structure d'un fichier ZIP">
 				<p style="font-size: .5em; text-align: right;">Source: <a
 						href="https://en.wikipedia.org/wiki/ZIP_(file_format)"
 						target="_blank">https://en.wikipedia.org/wiki/ZIP_(file_format)</a>
@@ -1814,7 +1814,7 @@ await zipReader.close()</code>
 			<section>
 				<h2>Merci !</h2>
 				<p>Questions ? 🤔, Feedback ? 📝</p>
-				<img src="./images/qr-code.png" style="max-height: 50vh;">
+				<img src="./images/qr-code.png" style="max-height: 50vh;" alt="QR Code">
 			</section>
 		</div>
 	</div>
@@ -1827,7 +1827,7 @@ await zipReader.close()</code>
 		for (const codeElement of codeElements) {
 			const path = codeElement.dataset.src;
 			if (path) {
-				const text = await (await fetch(path)).text();
+				const text = await(await fetch(path)).text();
 				codeElement.textContent = text;
 			}
 		}
